Fix modal text not being visible

--- a/src/app/level/level.component.less
+++ b/src/app/level/level.component.less
@@ -506,6 +506,7 @@
   display: inline-block;
   font-size: 24px;
   font-weight: 500;
+  color: #333;
   margin: 0;
   line-height: 1.42857143;
 }
@@ -516,6 +517,7 @@
 }
 
 .modal-body {
+  color: #333;
   position: relative;
   padding: 20px;
 }
